# dash-utils

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  tsconfig-cjs.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
cmake/: fmt.cmake  gtest.cmake  napi.cmake
src/: index.ts  loader.ts
src/native/: module.cc  module.h
src/native/greeter/: greeter.cc  greeter.h  greeter.ts
src/native/hello/: hello.cc  hello.h  hello.ts
tests/: greeter.test.ts  hello.test.ts  module2.test.ts
